<resources>
    <string name="app_name">My Application</string>
    <string name="subtitleauth">Masuk dengan akun yang sudah kamu miliki atau dengan sosial media kamu</string>
    <string name="titleauth">Selamat Datang</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="tv_btn_forgot_password">Lupa Password?</string>
    <string name="tv_auth_with">Atau Masuk Dengan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>