<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.auth.AuthActivity">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:padding="@dimen/dp16"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/titleauth"
                   android:fontFamily="sans-serif-condensed"
                   android:textSize="@dimen/sp24"
                   android:textStyle="bold"
                   android:textAlignment="center"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   android:layout_marginTop="@dimen/dp16"
                   android:fontFamily="sans-serif-condensed"
                   android:textSize="@dimen/sp14"
                   android:textStyle="normal"
                   android:text="@string/subtitleauth"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/dp26"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/label_email"
                       android:textStyle="bold"
                       android:fontFamily="sans-serif-condensed"
                       />
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/hint_email"
                       android:paddingHorizontal="@dimen/dp10"
                       android:paddingVertical="@dimen/dp10"
                       android:background="@color/gray_bg_et_auth"/>
                   <View
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/dp16"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/label_password"
                       android:textStyle="bold"
                       android:fontFamily="sans-serif-condensed"
                       />
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/hint_password"
                       android:paddingHorizontal="@dimen/dp10"
                       android:paddingVertical="@dimen/dp10"
                       android:background="@color/gray_bg_et_auth"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textAlignment="textEnd"
                       android:layout_marginTop="@dimen/dp16"
                       android:textSize="@dimen/sp16"
                       android:fontFamily="sans-serif-condensed"
                       android:textStyle="bold"
                       android:text="@string/tv_btn_forgot_password"/>

                   <Button
                       android:id="@+id/btn_masuk"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/dp26"
                       android:elevation="@dimen/dp0"
                       android:text="Masuk"
                       />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/tv_auth_with"
                       android:textAlignment="center"
                       android:layout_marginTop="@dimen/dp26"/>
               </LinearLayout>
           </LinearLayout>
       </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>